
  - Improve the performance of setting construction variables.

  - When cloning a construction environment, avoid over-writing an
    attribute for an added method if the user explicitly replaced it.

  - Add a warning about deprecated support for Python 1.5, 2.0 and 2.1.

  - Fix being able to SetOption('warn', ...) in SConscript files.

  - Add a warning about env.Copy() being deprecated.

  From Rob Managan:

  - Enhance TeX and LaTeX support to work with BuildDir(duplicate=0).

  - Re-run LaTeX when it issues a package warning that it must be re-run.

  From Jan Nijtmans:

  - If $JARCHDIR isn't set explicitly, use the .java_classdir attribute
    that was set when the Java() Builder built the .class files.

  From Greg Noel:

  - Document the Dir(), File() and Entry() methods of Dir and File Nodes.

  - Add the parse_flags option when creating Environments

  From Gary Oberbrunner:

  - Make File(), Dir() and Entry() return a list of Nodes when passed
    a list of names, instead of trying to make a string from the name
    list and making a Node from that string.

  - Fix the ability to build an Alias in --interactive mode.

  - Fix the ability to hash the contents of actions for nested Python
    functions on Python versions where the inability to pickle them
    returns a TypeError (instead of the documented PicklingError).

  From Jonas Olsson:

  - Fix use of the Intel C compiler when the top compiler directory,
    but not the compiler version, is specified.

  - Handle Intel C compiler network license files (port@system).

  From Jim Randall:

  - Fix how Python Value Nodes are printed in --debug=explain output.

  From Adam Simpkins:

  - Add a --interactive option that starts a session for building (or
    cleaning) targets without re-reading the SConscript files every time.

  - Fix use of readline command-line editing in --interactive mode.

  - Have the --interactive mode "build" command with no arguments