@@ -107,6 +107,24 @@ RELEASE 0.97.0d20071212 - Wed, 12 Dec 2007 09:29:32 -0600
         command-line option for suppressing this specific warning,
         are *not* backwards-compatible to earlier versions of SCons.
 
+    --  THE --debug=dtree, --debug=stree AND --debug=tree OPTIONS ARE DEPRECATED
+
+	The --debug=dtree, --debug=stree and --debug=tree methods
+	are now officially deprecated and will be removed in a
+	future release.  Using these options now generate a warning
+	message recommending use of the --tree=derived, --tree=all,status
+	and --tree=all options, respectively.
+
+	You may disable these warnings, and all warnings about
+	deprecated features, by adding the option "--warn=no-deprecated"
+	to the command line or to the $SCONSFLAGS environment
+	variable:
+
+            $ scons --warn=no-deprecated
+
+        Using '--warn=no-deprecated' is compatible with earlier versions
+        of SCons.
+
     --  File(), Dir() and Entry() NOW RETURN A LIST WHEN THE INPUT IS A SEQUENCE
 
         Previously, if these methods were passed a list, the list was
